docs: ドキュメントを実装に合わせて更新
- README.md: プロジェクト概要を日本語化し、実装済み機能を明確化
- docs/ABSTRACT.md: アーキテクチャ概要を実装状況に合わせて全面改訂
- docs/TEST.md: 実際のテスト戦略とツールに合わせて更新
- docs/JPMS-STRATEGY.md: 現在のJPMS対応状況と将来計画を明確化
- docs/INDEX.md: ドキュメント全体のエントリーポイントを新規作成

実装済み機能と開発中機能を明確に区別し、現在の技術スタックを反映。
ドキュメント間の相互参照とナビゲーションを改善し、読者別のガイドを提供。

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>